# proximaDB

./: .gitignore  ASSIGNMENT_SERVICE_IMPLEMENTATION.md  AVRO_MIGRATION_COMPLETE.md  CHANGELOG.adoc  CODEBASE_CLEANUP_SUMMARY.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS.md  CONTRIBUTING.adoc  COSINE_SIMILARITY_FIX.md  Cargo.toml  DOCKER_DEPLOYMENT.md  DOCUMENTATION_SUMMARY.adoc  Dockerfile  E2E_FLOW_DIAGRAM.md  FINAL_COMPLETION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  LICENSE  LICENSE_HEADER.txt  LOW_LEVEL_DESIGN.md  MULTI_FILESYSTEM_STORAGE_PATTERN.md  Makefile  NOTICE  PROXIMADB_ARCHITECTURE_DOCUMENTATION.adoc  README.adoc  README.md  REQUIREMENTS_IMPLEMENTATION_STATUS.md  SCHEMA_CONSOLIDATION_SUMMARY.adoc  SEARCH_OPTIMIZATION_REPORT.md  STORAGE_REORGANIZATION_PLAN.md  TEST_RESULTS.adoc  Test.atxt  WAL_COMPREHENSIVE_TEST_PLAN.md  WAL_CONFIGURATION_SUCCESS.md  ZERO_COPY_ALIGNMENT_ANALYSIS.md  ZERO_COPY_MIGRATION_GUIDE.md  addonindexing.txt  algorithm_benchmark_rest_working.py  analyze_parquet_files.py  analyze_storage_issue.py  benchmark_algorithms_comprehensive.py  (+154 more)
.cargo/: config.toml
assets/: logo_concept.adoc  logo_concept.md
benches/: api_benchmarks.rs  axis_benchmarks.rs  metadata_lifecycle.rs  mod.rs  search_benchmarks.rs  storage_performance.rs  vector_operations.rs
build_scripts/: compile_schemas.rs  sync_schemas.py
clients/python/: README.adoc  README.md  pyproject.toml
clients/python/log/: proximadb.log.2025-06-24
clients/python/reports/: report.html
clients/python/src/proximadb/: __init__.py  client.py  config.py  exceptions.py  grpc_client.py  grpc_client_obsolete.py  improved_rest_client.py  models.py  proximadb_pb2.py  proximadb_pb2_grpc.py  rest_client.py  schema_constants.py  schemas.py  sync_grpc_client.py  unified_client.py  unified_sdk.py  vectordb_pb2.py  vectordb_pb2_grpc.py
clients/python/tests/: README.md  conftest.py  test_client_sdk.py  test_collection_operations.py  test_grpc_api_completeness.py  test_persistence_wal.py  test_rest_api_completeness.py  test_search_operations.py  test_storage_layouts.py  test_vector_operations.py
clients/python/tests/debug/: test_debug_search.py
clients/python/tests/e2e/: __init__.py  conftest.py  test_comprehensive_sdk_suite.py  test_grpc_specific_operations.py  test_multidisk_persistence.py
clients/python/tests/grpc/: test_end_to_end_grpc.py  test_grpc_simple_vector_insert.py  test_new_grpc_api_bert.py  test_new_grpc_client.py  test_real_grpc_connection.py  test_simple_grpc.py  test_verify_grpc_connection.py
clients/python/tests/integration/: test_bert_collection_persistence.py  test_bulk_insert_zero_copy.py  test_comprehensive_sdk.py  test_comprehensive_search.py  test_grpc_client_integration.py  test_grpc_client_integration_async.py  test_grpc_large_scale_operations.py  test_grpc_vectors_comprehensive.py  test_metadata_unified.py  test_minimal_collections.py  test_persistence_comprehensive.py  test_real_server.py  test_rest_client_integration.py  test_rest_direct.py  test_restart_cycle.py  test_search_simplified.py  test_simple_collection.py  test_simple_collection_debug.py  test_simple_collections.py  test_simple_creation.py  test_simple_filestore.py  test_vector_coordinator_integration.py  test_working_operations.py
clients/python/tests/persistence/: test_collection_persistence_only.py  test_debug_persistence.py  test_filestore_persistence.py  test_filestore_realtime.py  test_filestore_verification.py  test_persistence_step_by_step.py  test_recovery_and_search.py  test_simple_recovery.py  test_verify_persistence.py
clients/python/tests/sdk/: test_grpc_collections_comprehensive.py  test_python_sdk_updated.py  test_rest_client.py  test_rest_client_comprehensive.py  test_rest_client_simple.py  test_sdk.py
clients/python/tests/unit/: test_advanced_search.py  test_atomic_operations.py  test_comprehensive_crud.py  test_config.py  test_connection_quick.py  test_exceptions.py  test_health_check.py  test_models.py  test_rest_client.py  test_unified_client.py  test_vector_operations.py
clients/python/tests/wal/: test_immediate_wal_persistence.py  test_wal_cleanup.py  test_wal_comprehensive.py  test_wal_direct.py  test_wal_persistence_comprehensive.py  test_wal_persistence_simple.py  test_wal_simple.py  test_wal_simple_unique.py
config/: local.toml  test_atomic_operations.toml
diagrams/: activity-vector-lifecycle.puml  architecture-overview.puml  axis-architecture.puml  deployment-diagram.puml  deployment-homelab.puml  deployment-models.puml  index-evolution-flow.mmd  protocol-flow-diagram.puml  proximadb-architecture.puml  server-internal-architecture.puml  state-diagram.puml  storage-architecture.puml  storage-policy.puml  storage-tiering.puml  storage-tiers.puml  tenant-isolation.puml  tenant-routing.puml  unified-architecture.puml  usecase-diagram.puml  viper-sorted-rewrite-architecture.puml  viper-sorted-rewrite-pipeline.mmd  viper-sorted-rewrite-pipeline.puml
docs/: API_CHANGES_AVRO_MIGRATION.adoc  Advanced_Search_Features_Proposal.md  DESIGN_DECISIONS.md  PERFORMANCE_BENCHMARK_AVRO_MIGRATION.adoc  README.adoc  REST_API_REFERENCE.adoc  SIMPLIFIED_ARCHITECTURE.adoc  Search_System_Status_Report.md  developer_guide.adoc  hld.adoc  implementation_status.adoc  lld.adoc  lld_axis.adoc  requirements.adoc  rest_api_guide.adoc  test_matrix.adoc  user_guide.adoc
embedding_cache/: all-MiniLM-L6-v2_03a0be56d20d4f5339af8e804db5e1c9.pkl  all-MiniLM-L6-v2_05165fb99ea5b9cd34180a2cab142f82.pkl  all-MiniLM-L6-v2_075f8d4a5c78ee633626438b33783e09.pkl  all-MiniLM-L6-v2_0e52788a051b18ae3b6c0af50c3a0ed5.pkl  all-MiniLM-L6-v2_1a86f97d8742be7ad6715c8575baac2f.pkl  all-MiniLM-L6-v2_1b6d2ae68c5eb2d94ef40c627889e1c6.pkl  all-MiniLM-L6-v2_1fbb153c77d3a87e50b5c4b711daf200.pkl  all-MiniLM-L6-v2_2d9d60832a7dbe645111fa1626c45cd9.pkl  all-MiniLM-L6-v2_3755dad2aad97d02e290f26b5c52ca24.pkl  all-MiniLM-L6-v2_4152272aa40db234c0e6c17b40fa9f2b.pkl  all-MiniLM-L6-v2_44605040ac27c56ebe5d838c9ca4e8a4.pkl  all-MiniLM-L6-v2_4576bcd805aa42ea53006bc54a558579.pkl  all-MiniLM-L6-v2_4f4fa07430da946f35c038449db4ac81.pkl  (+21 more)
(+1579 files in other folders)
