[package]
name = "proximadb"
version = "0.1.0"
edition = "2021"
authors = ["Vijaykumar Singh <singhvjd@gmail.com>"]
description = "ProximaDB - Cloud-native vector database engineered for AI-first applications"
license = "Apache-2.0"
repository = "https://github.com/vjsingh1984/proximadb"
homepage = "https://github.com/vjsingh1984/proximadb"
keywords = ["vector", "database", "ai", "ml", "proximity", "similarity-search"]
categories = ["database-implementations", "science"]

[workspace]
members = [
    ".",
]

[[bin]]
name = "proximadb-server"
path = "src/bin/server.rs"


[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Checksums
crc32fast = "1.4"

# System information
libc = "0.2"

# Data structures
# art-tree = "0.2.0"  # Disabled - x86_64 specific, incompatible with ARM64
# Alternative: Use HashMap for ART implementation (already done in art.rs)
once_cell = "1.19"
# dashmap = "6.1.0"     # High-performance concurrent hashmap for ART alternative (already defined below)

# Networking & gRPC
tonic = "0.10"
tonic-build = "0.10"
tonic-reflection = "0.10"
prost = "0.12"
prost-types = "0.12"
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }

# Storage & Memory Management
memmap2 = "0.9"
# rocksdb = "0.21"  # Commented out to fix build issues
tempfile = "3.0"
parquet = { version = "51.0", default-features = false, features = ["arrow"] }
# arrow = { version = "51.0", default-features = false }  # Full Arrow pulls in arrow-arith
# Use only the specific Arrow sub-crates we need to avoid arrow-arith
arrow-array = "51.0"
arrow-schema = "51.0" 
arrow-data = "51.0"
# pqrs = "0.3.2"       # Removed - no lib target, but helped us find compatible versions

# Advanced compression for recovery-optimized WAL
lz4_flex = "0.11"        # Faster LZ4 implementation
snap = "1.1"             # Snappy compression
zstd = "0.13"            # Zstandard compression
flate2 = "1.0"

# System monitoring
sysinfo = "0.30"

# Avro serialization with schema evolution
apache-avro = "0.16"

# Cloud storage SDKs
aws-config = "1.0"
aws-sdk-s3 = "1.0"
azure_storage = "0.19"
azure_storage_blobs = "0.19"
google-cloud-storage = "0.15"

# ML clustering algorithms for VIPER (unused - basic clustering implemented)
# linfa = "0.7"
# linfa-clustering = "0.7"
# smartcore = "0.3"

# Consensus (temporarily disabled for testing)
# raft = "0.7"
# raft-proto = "0.7"

# Vector operations & SIMD
ndarray = "0.15"
# faiss = { version = "0.11", optional = true }  # Unused - no FAISS integration implemented
hnsw = "0.11"

# CPU optimization
num_cpus = "1.16"

# Random number generation
rand = "0.8"

# GPU acceleration (removed - was placeholder code)

# Intel MKL (optional) - Disabled on ARM64
# intel-mkl-src = { version = "0.8", features = ["mkl-static-lp64-iomp"], optional = true }

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
prometheus = "0.13"
metrics = "0.21"
metrics-prometheus = "0.6"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.19", features = ["serde"] }  # Older version compatible with Arrow 44
crossbeam = "0.8"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
regex = "1.10"
slog = "2.7"
slog-stdlog = "4.1"

# REST API
axum = { version = "0.6", features = ["json"] }
axum-macros = "0.3"
urlencoding = "2.1.3"
crossbeam-skiplist = "0.1.3"
dashmap = "6.1.0"

# Build dependencies
[build-dependencies]
tonic-build = "0.10"
apache-avro = "0.16"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Development dependencies
[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempdir = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[features]
default = []  # Minimal features for ARM64 Ubuntu compatibility

# SIMD optimizations - ARM64 has NEON, not AVX
simd = []  # Placeholder - would need ARM NEON implementation

# CPU optimizations - Disabled Intel MKL on ARM64
# cpu-optimized = ["intel-mkl"]
# intel-mkl = ["intel-mkl-src"]

# GPU acceleration (removed - was placeholder code)

# External libraries
# faiss-cpu = ["faiss"]  # Unused - no FAISS integration
# faiss-gpu = ["faiss"]  # Unused - no FAISS integration

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# Test configuration
[[test]]
name = "integration"
path = "tests/rust/mod.rs"

# Release build profile optimized for production
[profile.release-server]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true

# Development build with tests
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

# Test profile
[profile.test]
opt-level = 1
debug = true
incremental = true

# Benchmark configuration
[[bench]]
name = "vector_operations"
harness = false
path = "benches/vector_operations.rs"

[[bench]]
name = "metadata_lifecycle"  
harness = false
path = "benches/metadata_lifecycle.rs"